Integrated new wsl01 and second CO2 sensors

--- a/.env_template
+++ b/.env_template
@@ -34,13 +34,19 @@ MQTT_DT_REQ_PH_GT1=dt/gf/sph01/gt1/req
 MQTT_DT_REQ_PH_GT2=dt/gf/sph01/gt2/req
 MQTT_DT_REQ_PH_MX=dt/gf/sph01/mx/req
 
-MQTT_DT_REQ_PAR_GT1=dt/gf/spar02/gt1/req
+MQTT_DT_REQ_SLIGHT01=dt/gf/slight01/req
 MQTT_DT_REQ_PAR_GT2=dt/gf/spar02/gt2/req
 
 MQTT_DT_REQ_STH_1=dt/gf/sth01/1/req
 MQTT_DT_REQ_STH_2=dt/gf/sth01/2/req
 
-MQTT_DT_REQ_CO2_VOC=dt/gf/co2voc/1/req
+MQTT_DT_REQ_WLS01_GT1=dt/gf/wls01/gt1/req
+MQTT_DT_REQ_WLS01_GT2=dt/gf/wls01/gt2/req
+MQTT_DT_REQ_WLS01_MX=dt/gf/wls01/mx/req
+MQTT_DT_REQ_WLS01_FWT=dt/gf/wls01/fwt/req
+
+MQTT_DT_REQ_CO2_VOC_2=dt/gf/co2voc/2/req
+MQTT_DT_REQ_CO2_VOC_1=dt/gf/co2voc/1/req
 MQTT_DT_REQ_SYM01=dt/gf/sym01/req
 
 # ───── Command Request Topics ─────
@@ -123,8 +129,8 @@ SENSOR_SPH_MX_ADDR=10
 SENSOR_SYM_PORT=/dev/ttySC1
 SENSOR_SYM_ADDR=12
 
-SENSOR_PAR02_1_PORT=/dev/ttySC1
-SENSOR_PAR02_1_ADDR=1
+SENSOR_SLIGHT01_PORT=/dev/ttySC1
+SENSOR_SLIGHT01_ADDR=1
 
 SENSOR_PAR02_2_PORT=/dev/ttySC1
 SENSOR_PAR02_2_ADDR=34
@@ -135,5 +141,20 @@ SENSOR_STH_1_ADDR=69
 SENSOR_STH_2_PORT=/dev/ttySC0
 SENSOR_STH_2_ADDR=70
 
-SENSOR_VCO2_PORT=/dev/ttySC0
-SENSOR_VCO2_ADDR=7
+SENSOR_VCO2_1_PORT=/dev/ttySC0
+SENSOR_VCO2_1_ADDR=7
+
+SENSOR_VCO2_2_PORT=
+SENSOR_VCO2_2_ADDR=
+
+SENSOR_WLS01_1_PORT=
+SENSOR_WLS01_1_ADDR=
+
+SENSOR_WLS01_2_PORT=
+SENSOR_WLS01_2_ADDR=
+
+SENSOR_WLS01_3_PORT=
+SENSOR_WLS01_3_ADDR=
+
+SENSOR_WLS01_4_PORT=
+SENSOR_WLS01_4_ADDR=
