--- a/server/homeassistant/config/include/Automations/sensor_calls.yaml
+++ b/server/homeassistant/config/include/Automations/sensor_calls.yaml
@@ -146,15 +146,80 @@
         payload: '{"req_topic": "dt/gf/sym01/req", "res_topic": "dt/gf/sym01/res", "data": "ha_req"}'
   mode: single
 
-# ──────────────── CO2VOC ────────────────
-- alias: "CO2VOC • Request"
+# ──────────────── CO2VOC 1 ────────────────
+- alias: "CO2VOC 1 • Request"
   trigger:
     - platform: state
       entity_id: input_text.main_loop_flag
-      to: "co2voc"
+      to: "co2voc_1"
   action:
     - service: mqtt.publish
       data:
         topic: "dt/gf/co2voc/1/req"
         payload: '{"req_topic": "dt/gf/co2voc/1/req", "res_topic": "dt/gf/co2voc/1/res", "data": "ha_req"}'
+  mode: single
+
+# ──────────────── CO2VOC 2 ────────────────
+- alias: "CO2VOC 2 • Request"
+  trigger:
+    - platform: state
+      entity_id: input_text.main_loop_flag
+      to: "co2voc_2"
+  action:
+    - service: mqtt.publish
+      data:
+        topic: "dt/gf/co2voc/2/req"
+        payload: '{"req_topic": "dt/gf/co2voc/2/req", "res_topic": "dt/gf/co2voc/2/res", "data": "ha_req"}'
+  mode: single
+
+# ──────────────── WLS01 GT1 ────────────────
+- alias: "WLS01 GT1 • Request"
+  trigger:
+    - platform: state
+      entity_id: input_text.main_loop_flag
+      to: "wls01_gt1"
+  action:
+    - service: mqtt.publish
+      data:
+        topic: "dt/gf/wls01/gt1/req"
+        payload: '{"req_topic": "dt/gf/wls01/gt1/req", "res_topic": "dt/gf/wls01/gt1/res", "data": "ha_req"}'
+  mode: single
+
+# ──────────────── WLS01 GT2 ────────────────
+- alias: "WLS01 GT2 • Request"
+  trigger:
+    - platform: state
+      entity_id: input_text.main_loop_flag
+      to: "wls01_gt2"
+  action:
+    - service: mqtt.publish
+      data:
+        topic: "dt/gf/wls01/gt2/req"
+        payload: '{"req_topic": "dt/gf/wls01/gt2/req", "res_topic": "dt/gf/wls01/gt2/res", "data": "ha_req"}'
+  mode: single
+
+# ──────────────── WLS01 MX ────────────────
+- alias: "WLS01 MX • Request"
+  trigger:
+    - platform: state
+      entity_id: input_text.main_loop_flag
+      to: "wls01_mx"
+  action:
+    - service: mqtt.publish
+      data:
+        topic: "dt/gf/wls01/mx/req"
+        payload: '{"req_topic": "dt/gf/wls01/mx/req", "res_topic": "dt/gf/wls01/mx/res", "data": "ha_req"}'
+  mode: single
+
+# ──────────────── WLS01 FWT ────────────────
+- alias: "WLS01 FWT • Request"
+  trigger:
+    - platform: state
+      entity_id: input_text.main_loop_flag
+      to: "wls01_fwt"
+  action:
+    - service: mqtt.publish
+      data:
+        topic: "dt/gf/wls01/fwt/req"
+        payload: '{"req_topic": "dt/gf/wls01/fwt/req", "res_topic": "dt/gf/wls01/fwt/res", "data": "ha_req"}'
   mode: single
