--- a/server/homeassistant/config/include/GUI_helpers/input_number.yaml
+++ b/server/homeassistant/config/include/GUI_helpers/input_number.yaml
@@ -518,6 +518,35 @@ heating_pid_kd:
   mode: box
   icon: mdi:chart-bell-curve
 
+# ─────────────── Nutrient ─────────────── #
+nutrient_1_ref:
+  name: "Nutrient 1 Reference"
+  min: 0
+  max: 10
+  step: 0.1
+  initial: 1.0
+  mode: box
+  icon: mdi:beaker
+
+nutrient_2_ref:
+  name: "Nutrient 2 Reference"
+  min: 0
+  max: 10
+  step: 0.1
+  initial: 1.0
+  mode: box
+  icon: mdi:beaker
+
+nutrient_3_ref:
+  name: "Nutrient 3 Reference"
+  min: 0
+  max: 10
+  step: 0.1
+  initial: 1.0
+  mode: box
+  icon: mdi:beaker
+
+
 # ─────────────── HSI ─────────────── #
 
 # === CAMERA ===
