--- a/server/homeassistant/config/include/mqtt_sensor_topics.yaml
+++ b/server/homeassistant/config/include/mqtt_sensor_topics.yaml
@@ -7,14 +7,14 @@
 
 #─────── 1 ───────
 
-- name: "CO2/VOC Sensor [Humidity]"
+- name: "CO2/VOC Sensor 1 [Humidity]"
   unique_id: "CO2_VOC_HUMIDITY"
   state_topic: "dt/gf/co2voc/1/res"
   value_template: "{{ value_json['fields'].humidity }}"
   unit_of_measurement: "%"
   icon: "mdi:water-percent"
 
-- name: "CO2/VOC Sensor [Temperature]"
+- name: "CO2/VOC Sensor 1 [Temperature]"
   unique_id: "CO2_VOC_TEMPERATURE"
   state_topic: "dt/gf/co2voc/1/res"
   value_template: "{{ value_json['fields'].temperature }}"
